--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -82,15 +82,14 @@ From {{der|en|enm|beden}}, from {{der|en|ang|-}} {{m|ang|bēodan||to offer, anno
 {{en-verb|bids|bidding|bid}}
 
 # {{lb|en|intransitive}} To make an [[offer]] to [[pay]] or [[accept]] a certain [[price]].
-#: ''Have you ever '''bid''' in an auction?''
+#: {{ux|en|Have you ever '''bid''' in an auction?}}
 # {{lb|en|transitive}} To [[offer]] as a [[price]].
-#: ''She '''bid''' £2000 for the Persian carpet.''
+#: {{ux|en|She '''bid''' £2000 for the Persian carpet.}}
 # {{lb|en|intransitive}} To make an attempt.
-#: ''He was '''bidding''' for the chance to coach his team to victory once again.''
+#: {{ux|en|He was '''bidding''' for the chance to coach his team to victory once again.}}
 # {{lb|en|ambitransitive|card games}} To [[announce]] (one's [[goal]]), before starting [[play]].
 # {{lb|en|obsolete}} To [[proclaim]] (a bede, prayer); to [[pray]].
-#* '''1590''', Edmund Spendser, ''The Faerie Queene'', I.x:
-#*: All night she spent in '''bidding''' of her bedes, / And all the day in doing good and godly deedes.
+#* {{RQ:Spenser Faerie Queene|I|x|passage=All night she spent in '''bidding''' of her bedes, / And all the day in doing good and godly deedes.}}
 
 =====Derived terms=====
 * {{l|en|forbid}}
