/* Derived terms */ +++ <again#68475964>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -76,7 +76,10 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m
 |again-coming
 |agenbite
 |once again
-}}
+|all over again
+|as much again
+|born again
+|born-again|breathe again|but then again|come again|cut and come again|cut-and-come-again|everything old is new again|fix it again Tony|half again|here we go again|how's that again|never again|now and again|once and again|over again|over and over again|please say that again|say again|sold again and got the money|then again|there again|think again|time and again|time and time again|to and again|turn again|until we meet again|what's old is new again|you can say that again|you can't go home again}}
 
 ====Translations====
 {{trans-top|back to a former place or state}}
