--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -166,7 +166,7 @@ As a variant of {{m|de|-heim}} through reduction to {{IPAchar|[əm]}} and subseq
 # {{ngd|A placename suffix, often an}} {{alternative form of|de|-heim|nocap=1}}.
 
 =====Derived terms=====
-{{col4|de|Archsum|Bachum|Baltrum|Berum|Bochum|Bordelum|Borgsum|Borkum|Bornum|Breklum|Brinkum|Bültum|Büsum|Critzum|Dersum|Ditzum|Dornum|Dunsum|Filsum|Hatzum|Holsthum|Hörnum|Horum|Husum|Itzum|Jemgum|Keitum|Königsdahlum|Mahlum|Midlum|Morsum|Niedlum|Ochtersum|Oevenum|Oltsum|Östrum|Pelkum|Petkum|Rantum|Risum|Stockum|Süderlügum|Sustrum|Suttrum|Tinnum|Utersum|Walchum|Wankum|Werdum|Wirdum|Wrixum}}
+{{col4|de|Adlum|Archsum|Arnum|Bachum|Baltrum|Berum|Bochum|Bolzum|Bordelum|Borgsum|Borkum|Bornum|Breklum|Borsum|Brinkum|Bültum|Büsum|Critzum|Dersum|Ditzum|Dornum|Dunsum|Eitzum|Filsum|Harsum|Hatzum|Heinum|Heyersum|Holsthum|Hörnum|Horum|Hüdessum|Husum|Itzum|Jemgum|Keitum|Königsdahlum|Luttrum|Machtsum|Mahlum|Mehrum|Midlum|Morsum|Niedlum|Ochtersum|Oevenum|Ohlum|Oltsum|Östrum|Pelkum|Petkum|Rantum|Risum|Sorsum|Stockum|Süderlügum|Sustrum|Suttrum|Tinnum|Utersum|Vöhrum|Walchum|Wankum|Werdum|Wirdum|Wrixum}}
 
 ----
 
