--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -238,7 +238,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|ċinn||chin}}, from {{inh|en|gem-pro
 * Sinhalese: {{t|si|නිකට|sc=Sinh}}
 * Slovak: {{t+|sk|brada|f}}
 * Slovene: {{t+|sl|brada|f}}
-* Somali: {{t|so|gar}}
+* Somali: {{t|so|gadh}}
 * Sorbian:
 *: Upper Sorbian: {{t|hsb|broda|f}}
 * Sotho: {{t|st|seledu|c7|c8}}
