--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -9,6 +9,7 @@
 # {{lb|en|idiomatic}} To [[win]] or [[earn]] a large amount of [[money]].
 #* '''1913''', [[w:Rex Ellingwood Beach|Rex Ellingwood Beach]], ''The Iron Trail: An Alaskan Romance'', ch. 5:
 #*: "Now if they were playing faro I could '''make a killing'''."
+#* {{quote-song|en|year=1996|author={{w|Ani DiFranco}}|album={{w|Dilate (Ani DiFranco album)|Dilate}}|title=Napoleon|passage=And I said I still make a pretty good living / But you must '''make a killing''' / A killing}}
 #* '''2009''', Tom Huddleston, "[http://www.timeout.com/film/chicago/features/show-feature/6652/whats-all-the-fuss-about-slumdog-millionaire.html?cpage=5&ccat=27 What's all the fuss about 'Slumdog Millionaire'?]," ''Time'', 17 Jan.:
 #*: Danny Boyle's critical darling 'Slumdog Millionaire' has '''made a killing''' at the box office and is now being lavished with awards.
 
