--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -239,6 +239,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Swedish: {{t+|sv|blåsa}}
 * Tagalog: {{t|tl|hihip}}, {{t|tl|hihipan}}
 * Tausug: {{t|tsg|huyup}}
+* Ternate: {{t|tft|hio}}
 * Tetum: {{t|tet|huu}}
 * Thai: {{t+|th|พัด}}
 * Turkish: {{t+|tr|üflemek}}, {{t+|tr|esmek}}
