/* Translations */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <at#68495617>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -187,7 +187,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Burmese: {{t+|my|မှာ}}, {{t+|my|၌}}
 * Catalan: {{t+|ca|a}}
 * Chinese:
-*: Mandarin: {{qualifier|no preposition is used, e.g.:}} {{lang|und|[[五]][[點鐘]]}}, {{lang|und|[[五]][[点钟]]}} (wǔ diǎnzhōng) or {{lang|und|[[五]][[點]]}}, {{lang|und|[[五]][[点]]}} (wǔ diǎn) "at five o'clock"
+*: Mandarin: {{qualifier|no preposition is used, e.g.:}} {{t|cmn|[[五]][[點鐘]]}}, {{t|cmn|[[五]][[点钟]]|tr=wǔ diǎnzhōng}} or {{t|cmn|[[五]][[點]]}}, {{t|cmn|[[五]][[点]]|tr=wǔ diǎn}} "at five o'clock"
 * Cornish: {{t|kw|dhe}}
 * Czech: {{t+|cs|v}}
 * Danish: {{t+|da|på}}
