Updated quotation <mill dam#68495767>

--- a/en/m/mill dam.720303.wikitext
+++ b/en/m/mill dam.720303.wikitext
@@ -13,9 +13,8 @@
 {{en-noun}}
 
 # A [[dam]] constructed across a [[river]] or [[stream]] to raise the water level so that it can turn a [[millwheel]]; also, the [[millpond]] so created.
-#* {{RQ:Spenser Faerie Queene|passage=the which, once being brust, / Like to a great '''Mill-damb''' forth fiercely gusht, / And powred out of her infernall sinke / Most ugly filth […].|5|11}}
-#* {{RQ:Tennyson MD}}
-#*: {{quote|en|Or from the bridge I lean'd to hear / The '''milldam''' rushing down with noise, / And see the minnows everywhere / In crystal eddies glance and poise […].}}
+#* {{RQ:Spenser Faerie Queene|book=V|canto=XI|passage=the which, once being brust, / Like to a great '''Mill-damb''' forth fiercely gusht, / And powred out of her infernall sinke / Most ugly filth {{...}}}}
+#* {{RQ:Tennyson Poems 1833|poem=The Miller's Daughter|stanza=I|page=33|passage=He looked so joyy and so good— / While fishing in the '''milldam'''-water, / I laughed to see him as he stood, / And dreamt not of the miller's daughter.}}
 #* '''1960''', AM Holt, translating {{w|Gottfried Keller}}, ''Green Henry'', Calder Publications 2010, p. 456:
 #*: I sat down on the wooden side of a '''mill-dam''' and thought over the past night and the strange adventure in the entrance-hall of Agnes' house.
 
