--- a/en/b/bitter pill to swallow.855106.wikitext
+++ b/en/b/bitter pill to swallow.855106.wikitext
@@ -9,13 +9,13 @@
 ===Noun===
 {{en-noun|head=[[bitter pill]] [[to]] [[swallow]]|bitter pills to swallow}}
 
-# {{&lit|en|bitter pill|swallow}}
-# {{lb|en|idiomatic}} Something [[unpleasant]] that must be [[accepted]] or [[endured]].
+# {{lb|en|figurative}} Something [[unpleasant]] that must be [[accepted]] or [[endured]].
 #* {{quote-text|en|year=1886|author={{w|George Gissing}}|title=Demos: A Story of English Socialism|chapter=10|passage=[T]o see himself dethroned, the object of her contempt, was a '''bitter pill to swallow'''.}}
 #* '''1920''', "[https://web.archive.org/web/20130704024805/http://query.nytimes.com/mem/archive-free/pdf?_r=1&res=9C07E0D91E31E03ABC4953DFB366838B639EDE Amundsen to Try Again for Pole]," ''New York Times'', 1 May, p. 14:
 #*: "[W]e cast loose from the ice after a very careful inspection which left us no hope whatsoever of penetrating it. . . . It was a '''bitter pill to swallow''', but we decided to search for Winter quarters somewhere along the coast."
 #* '''2006''', [[w:Tony Karon|Tony Karon]], "[https://web.archive.org/web/20100903202622/http://www.time.com/time/world/article/0,8599,1208298,00.html Inside Iraq's 'Amnesty' Plan]," ''Time'', 26 Jun.:
 #*: Giving them amnesty would be a '''bitter pill''' for the U.S. '''to swallow'''.
+# {{&lit|en|bitter pill|swallow}}
 
 ====Usage notes====
 * ''Bitter pill(s) to swallow'' is not a set phrase. Only a little more than 40% of the usage at [[COCA]] with a form of ''swallow'' within 9 words before or after is of the form given.
