t+ka:[[კოლექტიური უსაფრთხოება]] ([[WT:EDIT|Assisted]]) <collective security#68512884>

--- a/en/c/collective security.803561.wikitext
+++ b/en/c/collective security.803561.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 {{trans-top|concept of maintaining peace among all nations or members of a group}}
 * Finnish: {{t|fi|[[kollektiivinen]] [[turvallisuus]]}}
+* Georgian: {{t|ka|კოლექტიური უსაფრთხოება}}
 * Irish: {{t|ga|slándáil chomhchoiteann|f}}
 {{trans-mid}}
 * Korean: {{t|ko|집단 안전}}
