--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -24,6 +24,7 @@ Displaced native {{noncog|enm|acquerne}}, {{m|enm|aquerne}}, from {{noncog|ang|Ä
 #* {{quote-book|en|1865|Henry David Thoreau|Cape Cod|section=Chapter IX, "The Sea and the Desert"|page=187|text=He also said that minks, muskrats, foxes, coons, and wild mice were found there, but no '''squirrels'''.}}
 # {{lb|en|Scientology|often|disparaging}} A person, usually a [[freezoner]], who applies L. Ron Hubbard's technology in a [[heterodox]] manner.
 # One of the small [[roller]]s of a [[carding]] [[machine]] which work with the large [[cylinder]].
+# Someone who displays a squirrel-like qualities such as stealing or hoarding objects.
 
 ====Synonyms====
 * {{l|en|scug}} {{qualifier|provincial}}
