--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -166,8 +166,8 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Ladin: {{t|lld|peis|m}}
 * Lao: {{t|lo|ນ້ຳໜັກ}}, {{t|lo|ນ້ຳຫນັກ}}
 * Latin: {{t|la|pondus|n}}
-{{trans-mid}}
 * Latvian: {{t|lv|svars|m}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|svoris|m}}
 * Lombard: {{t|lmo|pes}}
 * Luxembourgish: {{t|lb|Gewiicht|n}}
@@ -183,6 +183,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Occitan: {{t+|oc|pes|m}}
 * Old English: {{t|ang|ġewiht|n}}
 * Oriya: {{t+|or|ଭାର}}
+* Oromo: {{t|om|ulfina}}
 * Ossetian: {{t|os|уӕз}}
 * Persian: {{t+|fa|وزن|tr=vazn|sc=fa-Arab}}
 * Plautdietsch: {{t+|pdt|Wicht|f}}
@@ -202,6 +203,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Sinhalese: {{t|si|බර}}
 * Slovak: {{t|sk|váha|f}}
 * Slovene: {{t+|sl|teža|f}}
+* Somali: {{t|so|culays}}
 * Spanish: {{t+|es|peso|m}}
 * Swahili: {{t+|sw|uzani}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
