--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -29,13 +29,15 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 #* {{quote-book|en|year=1913|author={{w|Joseph C. Lincoln}}
 |title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]|chapter=1
 |passage='''Then''' there came a reg'lar terror of a sou'wester same as you don't get one summer in a thousand, and blowed the shanty flat and ripped about half of the weir poles out of the sand. We spent consider'ble money getting 'em reset, and '''then''' a swordfish got into the pound and tore the nets all to slathers, right in the middle of the squiteague season.}}
-# {{lb|en|sequence}} Next in order; in addition.
+# {{lb|en|sequence}} Next in order of place.
 #: {{ux|en|There are three green ones, '''then''' a blue one.}}
 #* {{RQ:Churchill Celebrity|chapter=5|passage='''Then''' came a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps, with something of the stately pose which Richter has given his Queen Louise on the stairway, and the light of the reflector fell full upon her.}}
 #* {{quote-journal|en|date=2013-07-19|author={{w|Peter Wilby}}
 |volume=189|issue=6|page=30|magazine={{w|The Guardian Weekly}}
 |title=[http://www.theguardian.com/education/2013/jul/01/education-michael-gove-finland-gcse Finland spreads word on schools]
 |passage=Imagine a country where children do nothing but play until they start compulsory schooling at age seven. '''Then''', without exception, they attend comprehensives until the age of 16. Charging school fees is illegal, and so is sorting pupils into ability groups by streaming or setting.}}
+# [[in addition|In addition]]; [[also]]; [[besides]].
+#* {{quote-book|en|chapter=[[s:Peeps at Many Lands: Siam/Chapter 17|Chapter 17 White elephants]]|title=Peeps at Many Lands: Siam|author=Young, E|year=1908|publisher=Adam and Charles Black|location=London|page=75|text=Another legend says that now and again in the world's history a monarch appears who conquers and rules every nation under the sun. {{...}} '''Then''' many of the Siamese believe that the animal is inhabited by the soul of some great man of the past {{...}}}}
 # {{lb|en|conjunctive}} In that case.
 #* {{quote-book|1=en|year=1859|title=[[w:Rubaiyat of Omar Khayyam|The Rub&aacute;iy&aacute;t of Omar Khayy&aacute;m: The Astronomer-Poet of Persia]]|author=Edward Fitzgerald|authorlink=Edward Fitzgerald|page=1|text=And, as the Cock crew, those who stood before<br>The Tavern shouted — "Open '''then''' the Door!<br>You know how little while we have to stay,<br>And, once departed, may return no more."}}
 #: {{ux|en|If it’s locked, '''then''' we’ll need the key.}}
