--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -19,7 +19,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 #* {{RQ:Schuster Hepaticae|volume=V|page=vii|text=With fresh material, taxonomic conclusions are leavened by recognition that the material examined reflects the site it occupied; a herbarium packet gives one only a small '''fraction''' of the data desirable for sound conclusions. Herbarium material does not, indeed, allow one to extrapolate safely: what you see is what you get{{...}}}}
 # {{lb|en|arithmetic}} A [[ratio]] of two [[number]]s, the [[numerator]] and the [[denominator]], usually written one above the other and separated by a horizontal bar.<!--[[rational number]] (a rational number can always be expressed as a fraction using integers, but some fractions can even contain irrational numbers, (eg: pi/4, sqrt(2)/2; Also: ⅔/3 )-->
 # {{lb|en|chemistry}} A [[component]] of a [[mixture]], separated by [[fractionation]].
-# {{lb|en|christianity}} In a [[eucharistic]] [[service]], the breaking of the [[host#Noun_3|host]].
+# {{lb|en|Christianity}} In a [[eucharistic]] [[service]], the breaking of the [[host#Noun_3|host]].
 #* {{RQ:Taylor Works|volume=III|page=290|title=The History of the Life and Death of the Holy Jesus|subtitle=Discourse XIX.|passage={{...|So that, by Divine faith, we are taught to express our belief of this mystery, in these words:}} The bread, when it is consecrated and made sacramental, is the body of our Lord; and the '''fraction''' and distribution of it is the communication of that body, which died for us upon the cross.}}
 # A small amount.
 #* {{RQ:Churchill Celebrity|chapter=2|passage=I had occasion {{...}} to make a somewhat long business trip to Chicago, and on my return {{...}} I found Farrar awaiting me in the railway station. He smiled his wonted '''fraction''' by way of greeting, {{...}}, and finally leading me to his buggy, turned and drove out of town.}}
