Adding a reference <anarcho-capitalism#68531636>

--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{prefix|en|anarcho|capitalism}}. Often attributed to American economist {{w|Murray Rothbard}} (1950s), but he never used the term in any of his writings.
+From {{prefix|en|anarcho|capitalism}}. Coined by American economist {{w|Murray Rothbard}} in the 1950s.<ref>{{cite book |last=Leeson |first=Robert |title=Hayek: A Collaborative Biography, Part IX: The Divine Right of the 'Free' Market |publisher=Springer |year=2017 |isbn=978-3-319-60708-5 |pages=180 |quote=To the original 'anarchocapitalist' (Rothbard coined the term) [...].}}</ref>
 
 ===Noun===
 {{en-noun|head=[[anarcho-]][[capitalism]]|-}}
@@ -74,6 +74,9 @@ From {{prefix|en|anarcho|capitalism}}. Often attributed to American economist {{
 ===Further reading===
 * {{pedia}}
 * {{R:wquote|en}}
+
+====References====
+<references/>
 
 [[Category:en:Anarchism]]
 [[Category:en:Capitalism]]
