/* English */ alt form <nonbelligerent#68534865>

--- a/en/n/nonbelligerent.776152.wikitext
+++ b/en/n/nonbelligerent.776152.wikitext
@@ -3,6 +3,9 @@
 ===Etymology===
 {{prefix|en|non|belligerent}}
 
+===Alternative forms===
+* {{l|en|non-belligerent}}
+
 ===Adjective===
 {{en-adj|-}}
 
