--- a/en/s/sond.856409.wikitext
+++ b/en/s/sond.856409.wikitext
@@ -1,3 +1,12 @@
+==English==
+
+===Noun===
+{{en-noun}}
+
+# {{m|en|probe||testing device, detector}}: {{alternative spelling of|en|sonde}}
+
+----
+
 ==Middle English==
 
 ===Noun===
