t+sid:[[gacco]] ([[WT:EDIT|Assisted]]) <chin#68538994>

--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -235,6 +235,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|ċinn||chin}}, from {{inh|en|gem-pro
 *: Cyrillic: {{t|sh|брада|f}}, {{t|sh|подбрада|f}}, {{t|sh|подваљак|m}}, {{t|sh|подбрадак|m}}
 *: Roman: {{t+|sh|brada|f}}, {{t|sh|podbrada|f}}, {{t+|sh|podvaljak|m}}, {{t+|sh|podbradak|m}}
 * Sicilian: {{t+|scn|varvarottu|m}}, {{t+|scn|babbarottu|m}}
+* Sidamo: {{t|sid|gacco}}
 * Sinhalese: {{t|si|නිකට|sc=Sinh}}
 * Slovak: {{t+|sk|brada|f}}
 * Slovene: {{t+|sl|brada|f}}
