/* English */ restore deleted <anarcho-capitalism#68548306>

--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{prefix|en|anarcho|capitalism}}. Coined by American economist {{w|Murray Rothbard}} in the 1950s.<ref>{{cite book |last=Leeson |first=Robert |title=Hayek: A Collaborative Biography, Part IX: The Divine Right of the 'Free' Market |publisher=Springer |year=2017 |isbn=978-3-319-60708-5 |pages=180 |quote=To the original 'anarchocapitalist' (Rothbard coined the term) [...].}}</ref>
+From {{prefix|en|anarcho|capitalism}}. Coined by American economist {{w|Murray Rothbard}} in the 1950s,<ref>{{cite book |last=Leeson |first=Robert |title=Hayek: A Collaborative Biography, Part IX: The Divine Right of the 'Free' Market |publisher=Springer |year=2017 |isbn=978-3-319-60708-5 |pages=180 |quote=To the original 'anarchocapitalist' (Rothbard coined the term) {{...}}.}}</ref> although he never used it in any of his writings.
 
 ===Noun===
 {{en-noun|head=[[anarcho-]][[capitalism]]|-}}
