--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -18,7 +18,7 @@
 
 ===Etymology 1===
 {{root|en|ine-pro|*keh₂p-}}
-{{unk|en|title=Origin uncertain}}. Perhaps from {{inh|en|enm|*coppen}}, {{m|enm|*copen}}, from {{inh|en|ang|copian|t=to plunder; pillage; steal}}; or possibly from {{der|en|frm|caper|t=to capture}}, from {{der|en|la|capiō|t=to seize, grasp}}; or possibly from {{der|en|nl|kapen|t=to seize, to hijack}}, from {{der|en|ofs|kāpia|t=to buy}}. Compare also {{cog|enm|copen|t=to buy}}, from {{cog|dum|copen}}.
+{{unk|en|title=Origin uncertain}}. Perhaps from {{inh|en|enm|*coppen}}, {{m|enm|*copen}}, from {{inh|en|ang|copian|t=to plunder; pillage; steal}}; or possibly from {{der|en|frm|caper|t=to capture}}, from {{der|en|la|capiō|t=to seize, grasp}}; or possibly from {{der|en|nl|kapen|t=to seize, hijack}}, from {{der|en|ofs|kāpia|t=to buy}}, whence {{cog|stq|koopje}}, {{cog|frr|koope}}. Compare also {{cog|enm|copen|t=to buy}}, from {{cog|dum|copen}}.
 
 ====Verb====
 {{en-verb}}
