--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -61,6 +61,7 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 |diploma mill
 |essay mill
 |grist for the mill
+|gristmill
 |grist to the mill
 |Langley Mill
 |[[Little Mill]], [[Littlemill]]
