--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -377,11 +377,15 @@ From {{bor|nn|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 ==Portuguese==
 {{wp|lang=pt}}
 
+===Alternative forms===
+* {{l|pt|vodca}}
+
 ===Etymology===
 From {{bor|pt|ru|во́дка}}, diminutive of {{m|ru|вода́||water}}.
 
 ===Pronunciation===
-{{pt-IPA|br=vódka|pt=vó.dka}}
+* {{a|BR}} {{IPA|pt|/ˈvɔd͡ʒ.kɐ/|[ˈvɔ.d͡ʒi.kɐ]}}
+* {{a|PT}} {{IPA|pt|/ˈvɔd.kɐ/}}
 
 ===Noun===
 {{pt-noun|f}}
