t+hu:[[homoki ásótyúk]] t+hu:[[homoki lábastyúk]] t+hu:[[máleó]] ([[WT:EDIT|Assisted]]) <mallee fowl#68585350>

--- a/en/m/mallee fowl.745831.wikitext
+++ b/en/m/mallee fowl.745831.wikitext
@@ -17,6 +17,7 @@
 {{trans-top|''Leipoa ocellata''}}
 * Finnish: {{t+|fi|malleekana}}
 {{trans-mid}}
+* Hungarian: {{t|hu|homoki ásótyúk}}, {{t|hu|homoki lábastyúk}}, {{t|hu|máleó}}
 * Russian: {{t+|ru|гла́зчатая ку́рица|f}}
 {{trans-bottom}}
 
