t+fr:[[léipoa ocellé]] t-balance ([[WT:EDIT|Assisted]]) <mallee fowl#68585369>

--- a/en/m/mallee fowl.745831.wikitext
+++ b/en/m/mallee fowl.745831.wikitext
@@ -16,6 +16,7 @@
 ====Translations====
 {{trans-top|''Leipoa ocellata''}}
 * Finnish: {{t+|fi|malleekana}}
+* French: {{t|fr|léipoa ocellé|m}}
 {{trans-mid}}
 * Hungarian: {{t|hu|homoki ásótyúk}}, {{t|hu|homoki lábastyúk}}, {{t|hu|máleó}}
 * Russian: {{t+|ru|гла́зчатая ку́рица|f}}
