--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -266,6 +266,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Catalan: {{t+|ca|pes|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|砝碼|sc=Hani}}, {{t+|cmn|砝码|tr=fámǎ|sc=Hani}}
+* Czech: {{t+|cs|závaží|n}}
 * Estonian: {{t|et|kaaluma}}
 * Finnish: {{t+|fi|punnus}}
 * French: {{t+|fr|poids|m}}
@@ -283,6 +284,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Portuguese: {{t+|pt|peso|m}}
 * Russian: {{t+|ru|ги́ря|f}}
 * Scots: {{t|sco|weicht}}
+* Slovak: {{t|sk|závažie|n}}
 * Spanish: {{t+|es|peso|m}}
 * Swedish: {{t+|sv|vikt|c}}
 * Turkish: {{t+|tr|ağırlık}}
