--- a/en/b/biatch.741988.wikitext
+++ b/en/b/biatch.741988.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Etymology===
+Corruption of {{m|en|bitch}}.
+
 ===Pronunciation===
 * {{a|US}} {{IPA|en|/bi.ˈɑt͡ʃ/}}
 * {{audio|en|En-au-biatch.ogg|Audio (AU)}}
@@ -11,3 +14,14 @@
 #* {{quote-text|en|year=2002|author=Natika Waldon|title=Urban Affairs|page=197|passage=“Fuck you, you son of a bitch!” Dana screamed, trying to cover herself. “Fuck your mamma, '''biatch'''!” he said as he kicked his door shut.}}
 #* {{quote-text|en|year=2004|author=Greg Fox|title=Coming Clean: The Best and Worst of Dailyconfession.Com|page=76|passage=Something similar happened with ATM machines giving away money in the UK and the people who took advantage are now in prison . . . it's a '''biatch''' I know, but honesty really is the best policy!}}
 #* {{quote-text|en|year=2005|author=Matt Stone|title=Go Backpacking!|page=106|passage=This trail isn't merely hell, it's a full blown '''biatch'''!}}
+
+====Alternative forms====
+* [[biotch]], [[bioch]]
+* {{l|en|byotch}}
+* {{l|en|biach}}
+
+====Translations====
+{{trans-top}}
+* Spanish: {{t|es|putilla|f}}, {{t+|es|mujerzuela|f}}
+{{trans-mid}}
+{{trans-bottom}}
