t+om:[[wanta]] ([[WT:EDIT|Assisted]]) <thing#68623051>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -261,6 +261,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 *: Cyrillic: {{t|cu|вещь|f}}, {{t|cu|вѣщь|f}}
 * Old East Slavic: {{t|orv|вещь|f}}, {{t|orv|рѣчь|f}}
 * Old English: {{t|ang|þing|n}}
+* Oromo: {{t|om|wanta}}
 * Ossetian: {{t|os|ми}}
 * Pali: {{t|pi|vatthu|n}}
 * Pashto: {{t|ps|شى|m|tr=šay}}, {{t|ps|څيز|m|tr=ciz}}
