--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -140,7 +140,7 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 * Mongolian: {{t+|mn|ноён}}
 * Mwali Comorian: {{t|wlc|bwana}}
 * Ndzwani Comorian: {{t|wni|mwenye}}
-* Nepali: {{t|ne|श्रीमान|tr=srimān}}
+* Nepali: {{t|ne|श्रीमान|tr=srimān}}, {{t|ne| श्री|tr=sri}}
 * Norwegian:
 *: Bokmål: {{t+|nb|herre|m}}
 * Pashto: {{t|ps|آقا|m|tr=aqā}}, {{t|ps|آغا|m|tr=āǧã}}, {{t|ps|ښاغلى|m|tr=ӽāǧᶕlay}}, {{t+|ps|صاحب|m|tr=sāhéb}}
