--- a/en/s/souplesse.856095.wikitext
+++ b/en/s/souplesse.856095.wikitext
@@ -1,6 +1,17 @@
 ==French==
 
 ===Etymology===
+From {{der|en|fr|souplesse}}.
+
+===Noun===
+{{en-noun|-}}
+
+# In {{l|en|guerilla diplomacy}}, the ability to connect with the global political economy of knowledge for the remedial application of [[scientific]] and [[technological]] capacity in order to engage specific threats and challenges, typically in support of [[security]] and regional development.
+
+
+==French==
+
+===Etymology===
 {{af|fr|souple|-esse}}
 
 ===Pronunciation===
