--- a/en/f/flat affect.802766.wikitext
+++ b/en/f/flat affect.802766.wikitext
@@ -10,6 +10,7 @@
 ====Translations====
 {{trans-top}}
 {{trans-mid}}
+* Polish: {{t+|pl|[[spłycenie]] [[afekt]]u|n}}
 {{trans-bottom}}
 
 ====See also====
