--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -2,13 +2,14 @@
 
 ===Etymology===
 {{root|en|ine-pro|*peh₂w-}}
-{{suffix|en|pusillanimous|alt1=pusillanim(ous)|ity}}, from {{uder|en|frm|pusillanimité}}, from the ecclesiastical {{uder|en|la|-}} ''[[pusillanimis]]'', from ''[[pusillus]]'' (puny) + ''[[animus]] (spirit) + ''[[-ous]]. A translation of the Greek {{m|grc|ὀλιγόψυχος||faint-hearted}}.
+From {{suffix|en|pusillanimous|alt1=pusillanim(ous)|ity}}, from {{uder|en|frm|pusillanimité}}, from the ecclesiastical {{uder|en|la|-}} ''[[pusillanimis]]'', from ''[[pusillus]]'' (puny) + ''[[animus]] (spirit) + ''[[-ous]]. A translation of the Greek {{m|grc|ὀλιγόψυχος||faint-hearted}}.
 
 ===Noun===
 {{en-noun|~}}
 
 # The quality or state of being [[pusillanimous]]; the [[vice]] of being [[timid]] and [[cowardly]], and thus not living up to one's full [[potential]]; [[pusillanimousness]].
 #* {{RQ:Shakespeare Henry 4-2 Q1|act=IV|scene=ii|page=67|passage=The ſecond property of your excellent ſherris, is the vvarming of the blood, vvhich before (cold & ſetled) left the lyuer vvhite & pale, vvhich is the badge of '''puſilanimitie''' and covvardize: but the ſherris vvarmes it, and makes it courſe from the invvards to the partes extreames, {{...}}}}
+#* {{RQ:Hobbes Leviathan|chapter=Of the Vertues Commonly Called Intellectual; and Their Contrary Defects|page=33|passage={{...}} '''Puſillanimity'''; by vvhich that ſeems great to him, vvhich other men think a trifle: and vvhatſoever is nevv, or great, and therefore thought fit to be told, vvithdravves a man by degrees from the intended vvay of his diſcourſe.}}
 #* '''1685'''. [[w:Miguel de Molinos|Dr. Michael de Molinos]]: ''The Spiritual Guide which Disentangles the Soul, and Brings it by the Inward Way To The Getting of Perfect Contemplation and the Rich Treasure of Internal Peace'', CHAP. XVIII: [http://www.ccel.org/ccel/molinos/guide.html].
 #*: 132. And although thou often fallest, and seest thy '''Pusillanimity''', and endeavour to get courage, and afflict not thy self; because what God doth not do in forty Years, he sometimes doth in an instant, with a particular Mystery, that we may live low and humble, and know that ‘tis the Work of his powerful Hand, to free us from Sins.
 #* {{RQ:Gibbon Roman Empire|volume=I|chapter=I, Part III|passage=Instead of being confined within the walls of fortified cities, which the Romans considered as the refuge of weakness or '''pusillanimity''', the legions were encamped on the banks of the great rivers, and along the frontiers of the barbarians.}}
