--- a/en/n/new-wave.801864.wikitext
+++ b/en/n/new-wave.801864.wikitext
@@ -1,7 +1,7 @@
 {{also|new wave|New Wave}}
-==中文==
+==English==
 
-===鄞文===
+===Adjective===
 {{en-adj|head=[[new]]-[[wave]]|-}}
 
 # Of or pertaining to the [[New Wave]]
