--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|gem-pro|*leþrą||leather}}, borrowing from {{der|en|cel-pro|*ɸlitro-}}, from {{der|en|ine-pro|*pl̥tro-}}. 
+From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|gmw-pro|*leþr}}, from {{inh|en|gem-pro|*leþrą||leather}}, borrowing from {{der|en|cel-pro|*ɸlitro-}}, from {{der|en|ine-pro|*pl̥tro-}}. 
 
 Cognate with {{cog|fy|leare||leather}}, {{cog|nds|Leder||leather}}, {{cog|nl|leder}}, {{m|nl|leer||leather}}, {{cog|de|Leder||leather}}, {{cog|da|læder||leather}}, {{cog|sv|läder||leather}}, {{cog|is|leður||leather}}.
 
