/* Translations */Russian, Ukrainian <reburial#68661395>

--- a/en/r/reburial.741531.wikitext
+++ b/en/r/reburial.741531.wikitext
@@ -15,4 +15,6 @@
 {{trans-top|second or subsequent burial}}
 * Hungarian: {{t|hu|újratemetés}}
 {{trans-mid}}
+* Russian: {{t+|ru|перезахороне́ние|n}}
+* Ukrainian: {{t|uk|перепохова́ння|n}}
 {{trans-bottom}}
