--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -193,8 +193,8 @@ From {{bor|pt|fr|abandonner}}, from {{der|pt|fro|abandoner}}, formed from {{m|fr
 From {{bor|es|fr|abandonner}}, from {{der|es|gem-pro|*bannaną}}.
 
 ===Pronunciation===
-* {{audio|es|LL-Q1321 (spa)-AdrianAbdulBaha-abandonar.wav|Audio}}
 {{es-IPA}}
+* {{audio|es|LL-Q1321 (spa)-AdrianAbdulBaha-abandonar.wav|Audio (Columbia)}}
 
 ===Verb===
 {{es-verb}}
