/* Proper noun */ add places <Rayne#68671969>

--- a/en/r/Rayne.774571.wikitext
+++ b/en/r/Rayne.774571.wikitext
@@ -10,6 +10,9 @@
 
 # {{surname|en|from=given names}}, variant of [[Raine]].
 # {{given name|en|female}}.
+# {{place|en|city|co/Acadia Parish|s/Louisiana|c/USA}}
+# {{place|en|twp|co/Indiana County|s/Pennsylvania|c/USA}}.
+# {{place|en|village/and/cpar|in|dist/Braintree|co/Essex|cc/England}} {{q|[[OS]] grid ref TL7222}}.
 
 =====Derived terms=====
 * {{l|en|Raynes Park}}
