--- a/en/q/quadrate.802550.wikitext
+++ b/en/q/quadrate.802550.wikitext
@@ -45,9 +45,7 @@ From {{inh|en|enm|quadrat}}, from {{der|en|fro|quadrat|t=a square}}, from {{der|
 {{en-noun}}
 
 # {{lb|en|geometry}} A [[plane]] [[surface]] with four equal sides and four right angles; a [[square]]; hence, figuratively, anything having the outline of a square.
-#* '''1667''', [[w:John Milton|John Milton]], ''Paradise Lost'', Book VI:
-#*: At which command, the powers militant
-#*: That stood for heaven, in mighty '''quadrate''' joined.
+#* {{RQ:Milton Paradise Lost|text=At which command, the powers militant<br>That stood for heaven, in mighty '''quadrate''' joined.|VI}}
 # {{lb|en|astrology}} An aspect of the [[heavenly body|heavenly bodies]] in which they are distant from each other 90°, or the quarter of a circle; [[quartile]].
 # {{lb|en|anatomy}} The [[quadrate bone]].
 
