/* Derived terms */ <maximum#68684059>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -143,6 +143,7 @@ Via {{der|en|fr|-}} from {{der|en|la|maximum}}.
 |global maximum
 |local maximum
 |maximal
+|maximative
 |maximize
 |maximum break
 |maximum limit
