--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -174,6 +174,9 @@ Via {{der|en|fr|-}} from {{der|en|la|maximum}}.
 |maxima|maxim|maximům|maxima|maxima|maximech|maximy
 }}
 
+===Related terms===
+* See {{l|cs|maxim}}
+
 ===Further reading===
 * {{R:PSJC}}
 * {{R:SSJC}}
