--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -342,6 +342,41 @@ From {{inh|nn|non|hvat}}, from {{inh|nn|gem-pro|*hwat}}.
 
 ----
 
+==Tày==
+
+===Pronunciation===
+* {{tyz-IPA}}
+
+===Etymology 1===
+
+====Noun====
+{{tyz-noun|瓜}}
+
+# [[lemon]]
+# [[squash]]
+#: {{ux|tyz|𫇥'''瓜'''曾𫇥荳|tr=Bioóc '''qua''' tằng bioóc thúa|'''squash''' flowers and pea flowers}}
+
+=====Derived terms=====
+* {{col3|tyz|qua khao|qua bươn slí|qua nu}}
+
+===Etymology 2===
+
+====Noun====
+{{tyz-noun}}
+
+# [[pillar]]
+#: {{uxi|tyz|slâu '''qua'''|}}
+
+=====Derived terms=====
+* {{col3|tyz|qua tồng}}
+
+====References====
+*{{R:Hoàng Văn Ma, Lục Văn Pảo, Hoàng Chí}}
+*{{R:Lương Bèn}}
+*{{R:tyz:tdcnt}}
+
+----
+
 ==Vietnamese==
 
 ===Pronunciation===
