/* Derived terms */ <qua#68684977>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -368,7 +368,7 @@ From {{inh|nn|non|hvat}}, from {{inh|nn|gem-pro|*hwat}}.
 #: {{uxi|tyz|slâu '''qua'''|}}
 
 =====Derived terms=====
-* {{col3|tyz|qua tồng}}
+{{col3|tyz|qua tồng}}
 
 ====References====
 *{{R:Hoàng Văn Ma, Lục Văn Pảo, Hoàng Chí}}
