t+ta:[[பொசுபோரசு]] t+bn:[[বসফরাস প্রণালী]] t+mr:[[बोस्फोरस]] t+ml:[[ബോസ്ഫറസ്]] t+te:[[బోస్ఫొరస్ జలసంధి]] t+tg:[[Босфор]] t+tl:[[Bosporus]] ([[WT:EDIT|Assisted]]) <Bosphorus#68687198>

--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -43,6 +43,7 @@ From medieval {{uder|en|la|Bosphorus}}, from {{uder|en|grc|Βόσπορος}}.
 * Bashkir: {{t|ba|Босфор}}
 * Basque: {{t|eu|Bosforo itsasartea}}
 * Belarusian: {{t|be|Басфо́р|m}}
+* Bengali: {{t|bn|বসফরাস প্রণালী}}
 * Breton: {{t|br|Bosfor}}
 * Bulgarian: {{t|bg|Босфо́р|m}}
 * Catalan: {{t|ca|Bòsfor|m}}
@@ -85,7 +86,9 @@ From medieval {{uder|en|la|Bosphorus}}, from {{uder|en|grc|Βόσπορος}}.
 * Luxembourgish: {{t|lb|Bosporus}}
 * Macedonian: {{t|mk|Босфор|m}}
 * Malay: {{t|ms|Selat Bosphorus}}
+* Malayalam: {{t|ml|ബോസ്ഫറസ്}}
 * Maltese: {{t|mt|Bosforu|m}}
+* Marathi: {{t|mr|बोस्फोरस}}
 * Norwegian:
 *: Bokmål: {{t|nb|Bosporos|n}}
 *: Nynorsk: {{t|nn|Bosporos|n}}
@@ -106,7 +109,11 @@ From medieval {{uder|en|la|Bosphorus}}, from {{uder|en|grc|Βόσπορος}}.
 * Spanish: {{t|es|Bósforo|m}}
 * Swahili: {{t|sw|Bosporus}}
 * Swedish: {{t+|sv|Bosporen}}
+* Tagalog: {{t|tl|Bosporus}}
+* Tajik: {{t|tg|Босфор}}
+* Tamil: {{t|ta|பொசுபோரசு}}
 * Tatar: {{t|tt|Босфор бугазы}}, {{t|tt|Истанбул бугазы}}
+* Telugu: {{t|te|బోస్ఫొరస్ జలసంధి}}
 * Thai: {{t|th|ช่องแคบบอสฟอรัส|tr=chông kâep bòtforrát}}
 * Turkish: {{t+|tr|İstanbul Boğazı}}
 * Ukrainian: {{t|uk|Босфо́р|m}}
