--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -74,6 +74,7 @@ From medieval {{uder|en|la|Bosphorus}}, from {{uder|en|grc|Βόσπορος}}.
 * Italian: {{t+|it|Bosforo|m}}
 * Japanese: {{t|ja|ボスフォラス海峡|tr=Bosuporasu kaikyō}}
 * Javanese: {{t|jv|Selat Bosporus}}
+* Kannada: {{t|kn|ಬಾಸ್ಪೋರಸ್ ಕೊಲ್ಲಿ}}
 * Karakalpak: {{t|kaa|Bosfor}}
 * Kazakh: {{t|kk|Босфор бұғазы}}
 * Korean: {{t|ko|^보스포루스 해협}}
