--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -6,4 +6,21 @@
 ===Prepositional phrase===
 {{en-PP}}
 
-# {{lb|en|UK}} {{synonym of|en|at the end of one's rope||at the limit of one's patience}}
+# {{lb|en|UK}} At the [[limit]] of one’s [[patience]]; [[frustrated]] or [[annoyed]].
+#: {{syn|en|at [[the end of one's rope]]|q1=US}}
+
+====Translations====
+{{trans-top|at the limit of one’s patience}}
+* Chinese:
+*: Mandarin: {{t|cmn|在耐心的极限|tr=zài nàixīn de jíxiàn}}
+* Finnish: {{t|fi|[[olla]] [[katkeamispiste|katkeamispisteessä]]}}
+* French: {{t+|fr|au bout du rouleau}}, {{t+|fr|exaspéré}}
+{{trans-mid}}
+* German:  {{t|de|jemandem reißt (gleich) der Geduldsfaden}}, {{t|de|mit seiner Geduld am Ende}}
+* Italian: {{t|it|al limite della sopportazione}}
+* Korean: {{t|ko|진퇴양난에 빠진}}
+* Polish: {{t|pl|u kresu wytrzymałości}}
+* Polish: {{t|pl|u kresu wytrzymałości}}
+* Russian: {{t|ru|на грани срыва}}
+* Scottish Gaelic: {{t|gd|aig an dùbhlan le}}
+{{trans-bottom}}
