removed [[Category:en:Birds]]; added [[Category:en:Tubenose birds]] using [[Help:Gadget-HotCat|HotCat]] <diablotin#68689229>

--- a/en/d/diablotin.741371.wikitext
+++ b/en/d/diablotin.741371.wikitext
@@ -5,7 +5,7 @@
 
 # The [[black-capped petrel]], ''[[Pterodroma hasitata]]'', of Caribbean waters.
 
-[[Category:en:Birds]]
+[[Category:en:Tubenose birds]]
 
 ----
 
