/* Chinese */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <cop#68697934>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -252,6 +252,9 @@ From clipping of {{der|yue|en|copy|'''cop'''y}}.
 #: {{zh-x|照'''c{}o{}p{kop1}'''|to '''copy''' directly|C}}
 #: {{zh-x|左'''c{}o{}p{kop1}'''右'''c{}o{}p{kop1}'''|to '''copy''' snippets from here and there|C}}
 
+===See also===
+* {{l|zh|copy}}
+
 [[Category:Chinese terms written in foreign scripts]]
 
 ----
