--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -129,7 +129,7 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|کاک}}
 *: Northern Kurdish: {{t+|kmr|birêz}}, {{t+|kmr|kek}}, {{t+|kmr|mîrza}}, {{t+|kmr|efendî}}
-* Kyrgyz: {{t+|ky|господин}}, {{t|ky|мырза}}
+* Kyrgyz: {{t+|ky|господин}}, {{t|ky|мырза}}, {{t+|ky|байке}}, {{t+|ky|аке}}
 * Lao: {{t|lo|ທ່ານ}}, {{t|lo|ທ່ານເອີຽ}}
 * Latin: {{t+|la|dominus|m}}, {{t+|la|domine|m}} {{q|[[vocative case|vocative]]}}
 * Latvian: {{t|lv|kungs|m}}
