--- a/en/m/malam.4517.wikitext
+++ b/en/m/malam.4517.wikitext
@@ -66,6 +66,7 @@ From {{inh|ms|poz-pro|*maləm|t=night, darkness}}.
 * {{hyph|iba|ma|lam}}
 
 ===Noun===
+{{head|iba|noun}}
 #[[night]]
 
 ====Derived terms====
