--- a/en/s/saunterer.776075.wikitext
+++ b/en/s/saunterer.776075.wikitext
@@ -12,6 +12,7 @@
 {{trans-top|one who saunters}}
 * German: {{t+|de|Müßiggänger}} (in), {{t|de|Pflastertreter}} (in)
 {{trans-mid}}
+* Polish: {{t+|pl|spacerowicz|m}}, {{t+|pl|spacerowiczka|f}}
 {{trans-bottom}}
 
 ===Anagrams===
