--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -122,8 +122,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 #* '''1662''', ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
 #*: Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
 #* {{quote-book|en|year=1720|author=William Derham|title=Physico-theology|passage=After ſome Months, the '''Quack''' gets privately to Town, [...]}}
-#* '''1843''', [[:w:Thomas Carlyle|Thomas Carlyle]], ''[[:w:Past and Present (book)|Past and Present]]'', book 2, ch. 8, ''The Electon''
-#*: ‘if we are ourselves valets, there shall ‘exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!
+#* {{RQ:Carlyle Past and Present|2|ch. 8, The Electon||‘if we are ourselves valets, there shall ‘exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!}}
 #* {{RQ:Gilbert and Sullivan Mikado|song=A More Humane Mikado|page=36|passage=The advertising '''quack''' who wearies / With tales of countless cures, / His teeth, I've enacted, / Shall all be extracted / By terrified amateurs.}}
 #* '''1981''', ''[[w:S.O.B. (film)|S.O.B.]]'' (film):
 #*: ''Polly'' (to security guard, referring to Dr. Feingarten): Are you going to let that shyster in there?
