--- a/en/b/bailer.801537.wikitext
+++ b/en/b/bailer.801537.wikitext
@@ -16,6 +16,9 @@
 # {{lb|en|cricket|dated}} A [[delivery]] that heads towards the [[bail]]s after [[pitch]]ing.
 # {{lb|en|cricket|dated}} A delivery in which the ball hits one or both bails but does not dislodge them.
 
+====Derived terms====
+* [[gill bailer]]
+
 ====Translations====
 {{trans-top|a utensil}}
 * Bulgarian: {{t|bg|черпак}}
