--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -571,22 +571,22 @@ From {{inh|en|enm|blowe}}, {{m|enm|blaw}}, northern variant of {{m|enm|blewe|blÄ
 #: {{ux|en|A fabricator is used to direct a sharp '''blow''' to the surface of the stone.}}
 #: {{ux|en|During an exchange to end round 13, Duran landed a '''blow''' to the midsection.}}
 # A sudden or forcible act or effort; an assault.
-#* {{RQ:Arnold Rome}}
-#*: A vigorous '''blow''' might win [Hanno's camp].
+#* {{RQ:Thomas Arnold Rome|volume=III|chapter=Progress of the War in Italy after the Battle of CannÃ¦.{{nb...|Revolt of Capua, and of the People of Southern Italy to Hannibal. Great Exertions of the Romans. Surprise of Tarentum. Siege of Capua. Hannibal Marches on Rome. Reduction and Punishment of Capua. A.U.C. 538 to 543.}}|page=227|passage=There he found that {{...}} [[w:Hanno, son of Bomilcar|Hanno]]'s camp was crowded with cattle and carriages, and a mixed multitude of unarmed men, and even of women and children; and that a vigorous '''blow''' might win it with all its spoil: the indefatigable general was absent, scouring the country for additional supplies of corn.}}
 # A [[damaging]] [[occurrence]].<!--2-->
 #: {{syn|en|disaster|calamity}}
 #: {{ux|en|A further '''blow''' to the group came in 1917 when Thomson died while canoeing in Algonquin Park.}}
 #* {{RQ:Shakespeare King Lear|IV|vi|passage=a most poor man, made tame to fortune's '''blows'''}}
-#* {{quote-journal|en|date=April 15, 2011| author=Saj Chowdhury| title=Norwich 2 - 1 Nott'm Forest| work=BBC Sport| url=http://news.bbc.co.uk/sport2/hi/football/13009332.stm| passage=Norwich returned to second in the Championship with victory over Nottingham Forest, whose promotion hopes were dealt another '''blow'''.}}
+#* {{quote-journal|en|date=April 15, 2011|author=Saj Chowdhury|title=Norwich 2 - 1 Nott'm Forest|work=BBC Sport|url=http://news.bbc.co.uk/sport2/hi/football/13009332.stm|passage=Norwich returned to second in the Championship with victory over Nottingham Forest, whose promotion hopes were dealt another '''blow'''.}}
 # {{lb|en|AU|shearing|historical}} A [[cut]] made to a sheep's [[fleece]] by a [[shearer]] using [[hand-shears]].
-#* {{quote-journal|1=en|date=5 Dec 1891|journal=The Bacchus Marsh Express|place=Victoria|page=7|column=7|text=Click goes his shears; click, click, click.<br> Wide are the '''blows''', and his hand is moving quick,<br> The ringer looks round, for he lost it by a '''blow''',<br> And he curses that old shearer with the bare belled ewe.}}
+#* {{quote-journal|en|date=5 Dec 1891|journal=The Bacchus Marsh Express|place=Victoria|page=7|column=7|text=Click goes his shears; click, click, click. / Wide are the '''blows''', and his hand is moving quick, / The ringer looks round, for he lost it by a '''blow''', / And he curses that old shearer with the bare belled ewe.}}
 # {{lb|en|television}} {{syn of|en|button||the punchy or suspenseful line of dialogue that concludes a scene}}
 #* '''2014''', Martie Cook, ''Write to TV: Out of Your Head and onto the Screen'' (page 105)
 #*: The '''blow''' is important because it transitions the reader and eventually the audience from one scene to another.
 
 =====Derived terms=====
-{{der3
-|en|blow-by-blow
+{{col3
+|en
+|blow-by-blow
 |body blow
 |come to blows
 |[[death blow]], [[deathblow]]
