/* English */ +FR <nonavailability#68772965>

--- a/en/n/nonavailability.776147.wikitext
+++ b/en/n/nonavailability.776147.wikitext
@@ -10,3 +10,7 @@
 
 ====Alternative forms====
 * {{l|en|non-availability}}
+
+===Further reading===
+* {{R:OneLook}}
+* {{R:GNV|nonavailability, non-availability}}
