--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -6,9 +6,9 @@
 From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mighty}}.
 
 ===Pronunciation===
-* {{IPA|en|/ˈmɛɡə/}}
+* {{IPA|en|/ˈmɛɡə/|/ˈmeɪɡə/}}
 * {{audio|en|En-au-mega.ogg|Audio (AU)}}
-* {{rhymes|en|ɛɡə|s=2}}
+* {{rhymes|en|ɛɡə|eɪɡə}}
 
 ===Adjective===
 {{en-adj|-}}
