--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -163,6 +163,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Gothic: {{t|got|𐌱𐌹𐌸𐌴𐌷}}
 * Greek:
 *: Ancient: {{t|grc|εἶτα}}, {{t|grc|ἔπειτε}}
+* Guaraní: {{t|gn|upéi}}
 * Hebrew: {{t|he|אחר כך|tr=akhar-kakh}}
 * Hindi: {{t+|hi|फिर}}
 * Hungarian: {{t+|hu|aztán}}, {{t+|hu|azután}}, {{t+|hu|majd}}, {{t+|hu|utána}}
