--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -17,7 +17,7 @@ From {{inh|en|enm|dame}}, {{m|enm|dam||noble lady}}, from {{der|en|fro|dame||lad
 
 # {{lb|en|Britain}} ''Usually capitalized as'' '''{{l|en|Dame}}''': a [[title#Noun|title]] [[equivalent]] to [[Sir]] for a [[female#Adjective|female]] [[knight#Noun|knight]].
 #: {{ux|en|'''Dame''' Edith Sitwell}}
-#* {{quote-book|en|author=Marcia Pointon|authorlink=Marcia Pointon|chapter=Something Rich and Strange|title=Brilliant Effects: A Cultural History of Gem Stones and Jewellery|location=New Haven, Conn.; London|publisher=Published for the {{w|Paul Mellon Center for Studies in British Art}} by {{w|Yale University Press}}|year=2009|section=part 1 (Stories Touching Stones)|page=144|pageurl=https://books.google.com/books?id=fs9GAQAAIAAJ&pg=PA144|isbn=978-0-300-14278-5|passage=The cover of the modern {{smallcaps|cd}}, issued by EMI Classics with '''Dame''' {{w|Janet Baker}} and Sir {{w|John Barbirolli}} in 1965, carries a portrait of '''Dame''' Janet wearing a long coral necklace in reference to the song 'Where the Corals lie' to words by [[w:Richard Garnett (writer)|Richard Garnett]] (1835–1906).}}
+#* {{quote-book|en|author=Marcia Pointon|authorlink=Marcia Pointon|chapter=Something Rich and Strange|title=Brilliant Effects: A Cultural History of Gem Stones and Jewellery|location=New Haven, Conn.; London|publisher=Published for the {{w|Paul Mellon Centre for Studies in British Art}} by {{w|Yale University Press}}|year=2009|section=part 1 (Stories Touching Stones)|page=144|pageurl=https://books.google.com/books?id=fs9GAQAAIAAJ&pg=PA144|isbn=978-0-300-14278-5|passage=The cover of the modern {{smallcaps|cd}}, issued by EMI Classics with '''Dame''' {{w|Janet Baker}} and Sir {{w|John Barbirolli}} in 1965, carries a portrait of '''Dame''' Janet wearing a long coral necklace in reference to the song 'Where the Corals lie' to words by [[w:Richard Garnett (writer)|Richard Garnett]] (1835–1906).}}
 # {{lb|en|Britain}} A [[matron]] at a [[school#Noun|school]], especially {{w|Eton College}}.
 #* {{quote-book|en|author=Paul Shrimpton|chapter=Darnell’s School|title=A Catholic Eton?: Newman’s Oratory School|location=Leominster, Herefordshire|publisher=Gracewing|year=2005|page=88|pageurl=https://books.google.com/books?id=q6yhgA-nHAMC&pg=PA88|isbn=978-0-85244-661-4|passage=Even though the '''dames'''’ houses were being gradually phased out at Eton, [[w:John Henry Newman|[John Henry] Newman]] was enthusiastic about the arrangement since it met one of the promoters’ key demands; besides, he had experienced something similar as a boy at Ealing School, where the boarding houses were also under the jurisdiction of '''dames'''. The Ealing '''dames''' ensured that boys were properly dressed and cared for them when sick, and they also ran the tuck shops.}}
 #* {{quote-book|en|author=David Noy|chapter=Parents, Childhood, Youth (1739–1760)|title=[[w:Samuel Johnson|Dr Johnson]]’s Friend and {{w|Robert Adam}}’s Client Topham Beauclerk|location=Newcastle upon Tyne, Tyne and Wear|publisher=Cambridge Scholars Publishing|year=2016|page=14|pageurl=https://books.google.com/books?id=ApX6DAAAQBAJ&pg=PA14|isbn=978-1-4438-9037-3|passage=As he [Fréderic Guyaz] worked for [[w:Topham Beauclerk|Topham [Beauclerk]]] while he was at Eton, it is likely that Topham was a day-boarder there, living at home in Windsor. His Eton "'''dame'''" was Mrs. Bland; day-boarders were allocated to a '''dame''' at whose house they took their meals.|footer={{small|Windsor is on the opposite side of the River Thames from Eton.}}}}
