--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Alternative forms===
-* {{l|en|American-English}} {{qualifier|esp. adjective}}
+* {{qualifier|esp. adjective}}
 
 ===Etymology===
 1806 (US), {{m|en|American}} + {{m|en|English}}. As an adjective, 1892.
