--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -28,7 +28,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 |passage=The dirty secret of the internet is that all this distraction and interruption is immensely profitable. Web companies like to boast about&nbsp;[&hellip;], or offering services that let you&nbsp;[&hellip;], "share the '''things''' you love with the world" and so on. But the real way to build a successful online business is to be better than your rivals at undermining people's control of their own attention.}}
 # A [[word]], [[symbol]], [[sign]], or other [[referent]] that can be used to refer to any entity.
 # An individual object or distinct entity.
-# {{lb|en|informal}} A genuine concept, entity or phenomenon; something that actually exists (often contrary to expectation or belief). {{defdate|from 20th c.}}
+#{{senseid|en|genuine-phenomenon}} {{lb|en|informal}} A genuine concept, entity or phenomenon; something that actually exists (often contrary to expectation or belief). {{defdate|from 20th c.}}
 #: {{ux|en|Bacon pie? Is that a '''thing'''?}}
 #* {{quote-av|en
 |actor={{w|Rush Limbaugh}}
