/* Noun */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <blow#68991957>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -506,7 +506,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 
 # A strong [[wind]].
 #: {{ux|en|We're having a bit of a '''blow''' this afternoon.}}
-# {{lb|en|informal}} A chance to catch one’s breath.
+# {{lb|en|informal}} A [[chance]] to [[catch one's breath]].
 #: {{ux|en|The players were able to get a '''blow''' during the last timeout.}}
 # {{lb|en|uncountable|US|slang}} [[cocaine|Cocaine]].
 #: {{syn|en|Thesaurus:cocaine}}
