--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1056,6 +1056,24 @@ From {{der|xpo|azc-nah-pro|*aatl}}, from {{der|xpo|azc-pro|*pa|*pa-ta}}.
 
 ----
 
+==Salar==
+
+===Etymology===
+From {{inh|slr|trk-pro|*at}}.
+
+===Pronunciation===
+* {{IPA|slr|[atʰ]}}
+
+===Noun===
+{{head|slr|noun}}
+
+# [[horse]]
+
+===References===
+* {{R:slr:Lianyun|page=4}}
+
+----
+
 ==Scots==
 
 ===Preposition===
