--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -291,6 +291,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Yiddish: {{t|yi|האָז|m}}, {{t|yi|קיניגל|n}}, {{t|yi|קראָליק|m}}
 * Zazaki: {{t|zza|arwéş}}, {{t|zza|harwêş}}
 * Zhuang: {{t|za|duzdoq}}, {{t|za|doq}}
+* Zulu: {{t|zu|unogwaja|c1a}}
 {{trans-bottom}}
 
 {{trans-top|fur}}
