--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -290,6 +290,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Maranao: {{t|mrw|beboy}}, {{t|mrw|pandak}}
 * Marathi: {{tt|mr|डुकर|m}}
 * Mazanderani: {{tt|mzn|خی|tr=xi}}
+* Mbyá Guaraní: {{t|gun|poryko}}, {{t|gun|kure}}
 * Menominee: {{tt|mez|kōhkōs}}
 * Mi'kmaq: {{tt|mic|gulgwi's|an}}
 * Middle English: {{t|enm|hog}}, {{t|enm|pigge}}, {{t|enm|swyn}}
