--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -187,6 +187,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Malay: {{t|ms|tidak lama kemudian}}
 * Maltese: {{t|mt|mbagħad}}
 * Maori: {{t|mi|kātahi}}
+* Mbyá Guaraní: {{t|gun|ha'e gui}}
 * Mongolian: {{t-needed|mn}}
 * Norwegian: {{t+|no|så}}, {{t+|no|deretter}}, {{t+|no|siden}}
 * Old English: {{t|ang|þā}}
