t+be:[[зваро́тны адлі́к]] ([[WT:EDIT|Assisted]]) <countdown#69022466>

--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -25,7 +25,7 @@ From {{compound|en|count|down}}.
 * Albanian: {{t|sq|numërim mbrapsht}}
 * Arabic: {{t|ar|عَدٌّ تَنَازُلِيٌّ|m}}
 * Armenian: {{t-needed|hy}}
-* Belarusian: {{t-needed|be}}
+* Belarusian: {{t|be|зваро́тны адлі́к|m}}
 * Bulgarian: {{t|bg|отброяване|n}}
 * Chinese:
 *: Mandarin: {{t+|cmn|倒數|sc=Hani}}, {{t+|cmn|倒数|tr=dàoshǔ|sc=Hani}}, {{t+|cmn|倒計時}}, {{t+|cmn|倒计时|tr=dàojìshí}}
