t+pl:[[{{t-needed}}]] t+fr:[[carillonneur]] t+fi:[[{{t-needed}}]] t+nl:[[beiaardier]] t+nl:[[klokkenspeler]] t+nl:[[klokkenist]] t-balance ([[WT:EDIT|Assisted]]) <carillonist#69070439>

--- a/en/c/carillonist.855182.wikitext
+++ b/en/c/carillonist.855182.wikitext
@@ -13,10 +13,14 @@
 
 ====Translations====
 {{trans-top|one who plays the carillon}}
+* Dutch: {{t+|nl|beiaardier|m}}, {{t+|nl|klokkenspeler|m}}, {{t+|nl|klokkenist|m}}
+* Finnish: {{t-needed|fi}}
+* French: {{t+|fr|carillonneur|m}}
+* Polish: {{t-needed|pl}}
+{{trans-mid}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|звонар|m|sc=Cyrl}}
 *: Roman: {{t+|sh|zvonar|m|sc=Latn}}
-{{trans-mid}}
 * Spanish: {{t|es|carrillonero|m}}
 {{trans-bottom}}
 
