t+fi:[[[[tornikellopeli]]n [[soittaja]]]] ([[WT:EDIT|Assisted]]) <carillonist#69070567>

--- a/en/c/carillonist.855182.wikitext
+++ b/en/c/carillonist.855182.wikitext
@@ -14,7 +14,7 @@
 ====Translations====
 {{trans-top|one who plays the carillon}}
 * Dutch: {{t+|nl|beiaardier|m}}, {{t+|nl|klokkenspeler|m}}, {{t+|nl|klokkenist|m}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|[[tornikellopeli]]n [[soittaja]]}}
 * French: {{t+|fr|carillonneur|m}}
 * Polish: {{t-needed|pl}}
 {{trans-mid}}
