--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -104,7 +104,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 # {{lb|en|poker}} To place money into the [[pot]] in order to require others do the same, usually only used for the first person to place money in the pot on each round.
 
 =====Derived terms=====
-{{der3|title=Terms derived from ''bet'' (verb)|bet a dollar to a dime|bet a dollar to a doughnut|bet one's boots|bet one's bottom dollar|bet the farm|bet a dime to a dollar|bet a dollar to a donut|bet dollars to donuts|bet dollars to doughnuts|bet one's ass|bet one's life|bet out|bet up|wanna bet|want to bet|you bet}}
+{{der3|en|title=Terms derived from ''bet'' (verb)|bet a dollar to a dime|bet a dollar to a doughnut|bet one's boots|bet one's bottom dollar|bet the farm|bet a dime to a dollar|bet a dollar to a donut|bet dollars to donuts|bet dollars to doughnuts|bet one's ass|bet one's life|bet out|bet up|wanna bet|want to bet|you bet}}
 
 =====Translations=====
 {{trans-top|to stake or pledge upon the outcome of an event}}
