--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -1,7 +1,7 @@
 {{also|Otter}}
 ==English==
 {{wikipedia}}
-[[Image:Loutre des pyrenees baronnies 2004.jpg|thumb|otter (1)]]
+[[Image:Otter.jpg|thumb|otter (1)]]
 
 ===Etymology 1===
 {{root|en|ine-pro|*wed-}}
