t+pl:[[klarnecista]] t+pl:[[klarnecistka]] ([[WT:EDIT|Assisted]]) <carillonist#69077461>

--- a/en/c/carillonist.855182.wikitext
+++ b/en/c/carillonist.855182.wikitext
@@ -16,7 +16,7 @@
 * Dutch: {{t+|nl|beiaardier|m}}, {{t+|nl|klokkenspeler|m}}, {{t+|nl|klokkenist|m}}
 * Finnish: {{t+|fi|[[tornikellopeli]]n [[soittaja]]}}
 * French: {{t+|fr|carillonneur|m}}
-* Polish: {{t-needed|pl}}
+* Polish: {{t+|pl|klarnecista|m}}, {{t+|pl|klarnecistka|f}}
 {{trans-mid}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|звонар|m|sc=Cyrl}}
