--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -44,6 +44,9 @@ From {{der|nl|en|oh my}}.
 
 ==Iban==
 
+===Alternative forms===
+* {{alt|iba|amat}}
+
 ===Pronunciation===
 * {{IPA|iba|/amai/}}
 
