--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -11,6 +11,7 @@
 {{en-noun}}
 
 # an [[AK-47]], [[AK-74]], or related assault rifle (Avtomat Kalasnikova or [[Kalashnikov]])
+# {{lb|en|by extension|slang|nonstandard}} Any assault rifle or machine gun.
 
 ===See also===
 * {{l|en|AR}}
