--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -12,6 +12,8 @@
 
 # an [[AK-47]], [[AK-74]], or related assault rifle (Avtomat Kalasnikova or [[Kalashnikov]])
 # {{lb|en|by extension|slang|nonstandard}} Any assault rifle or machine gun.
+#* '''2001''', D12, "That's How", ''Devil's Night'', Shady Records:
+#*: Cops got '''AKs''', y'all only got pumps, that shit's just dumb.
 
 ===See also===
 * {{l|en|AR}}
