--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -33,7 +33,7 @@ From {{bor|en|ro|Transnistria}}, from {{der|en|la|trans}} + {{der|en|ro|Nistru|t
 * Bulgarian: {{t|bg|Приднестро́вие|n}}
 * Catalan: {{t+|ca|Transnístria|f}}
 * Chinese:
-*: Mandarin: {{t|cmn|涅斯特里亞}}, {{t|cmn|涅斯特里亚|tr=Nièsītèlǐyà}}, {{t+|cmn|德涅斯特河沿岸|tr=Dénièsītèhéyán'àn}}
+*: Mandarin: {{t+|cmn|德涅斯特河沿岸|tr=Dénièsītèhéyán'àn}}, {{t|cmn|涅斯特里亞}}, {{t|cmn|涅斯特里亚|tr=Nièsītèlǐyà}}
 * Czech: {{t|cs|Podněstří|n}}
 * Danish: {{t|da|Transnistrien|n}}
 * Dutch: {{t|nl|Trans-Nistrië|n}}
