--- a/en/b/bailer.801537.wikitext
+++ b/en/b/bailer.801537.wikitext
@@ -28,6 +28,7 @@
 {{trans-mid}}
 * Maori: {{t|mi|tīheru}}, {{t|mi|tatā}}
 * Ngazidja Comorian: {{t|zdj|upvo|c11|c10a}}
+* Portuguese: {{t|pt|vertedouro|m}}, {{t|pt|vertedoiro|m}}
 * Russian: {{t+|ru|черпак|m}}
 * Swedish: {{t+|sv|öskar|n}}
 {{trans-bottom}}
