t+pt:[[bartedouro]] t+pt:[[bartedoiro]] ([[WT:EDIT|Assisted]]) <bailer#69153190>

--- a/en/b/bailer.801537.wikitext
+++ b/en/b/bailer.801537.wikitext
@@ -28,7 +28,7 @@
 {{trans-mid}}
 * Maori: {{t|mi|tīheru}}, {{t|mi|tatā}}
 * Ngazidja Comorian: {{t|zdj|upvo|c11|c10a}}
-* Portuguese: {{t|pt|vertedouro|m}}, {{t|pt|vertedoiro|m}}
+* Portuguese: {{t|pt|vertedouro|m}}, {{t|pt|vertedoiro|m}}, {{t|pt|bartedouro|m}}, {{t|pt|bartedoiro|m}}
 * Russian: {{t+|ru|черпак|m}}
 * Swedish: {{t+|sv|öskar|n}}
 {{trans-bottom}}
