t+pl:[[Druga Księga Samuela]] t-balance ([[WT:EDIT|Assisted]]) <2 Samuel#69156652>

--- a/en/2/2 Samuel.801688.wikitext
+++ b/en/2/2 Samuel.801688.wikitext
@@ -15,13 +15,14 @@
 *: Mandarin: {{t+|cmn|撒母耳記下|sc=Hani}}, {{t+|cmn|撒母耳记下|tr=Sǎmǔ'ěrjì Xià|sc=Hani}}, {{t|cmn|撒慕爾紀下|sc=Hani}}, {{t|cmn|撒慕尔纪下|tr=Sǎmù'ěrjì Xià|sc=Hani}} {{qualifier|Catholic}}
 *: Min Nan: {{t|nan|撒母耳記下卷|sc=Hani}}, {{t|nan|撒母耳记下卷|tr=Sat-bó͘-ní Kì Hā-koàn, Sat-bó͘-jí Kì Hā-koàn|sc=Hani}}, {{t|nan|撒母耳記下|sc=Hani}}, {{t|nan|撒母耳记下|tr=Sat-bó͘-ní Kì Hā, Sat-bó͘-jí Kì Hā|sc=Hani}}, {{t|nan|撒慕爾紀下}}, {{t|nan|撒慕尔纪下|tr=Sat-bō͘-ní-kí hā}} {{qualifier|Catholic}}
 * French: {{t|fr|2 Samuel|m}}
-* German: {{t|de|2 Samuel}}
 {{trans-mid}}
+* German: {{t|de|2 Samuel}}
 * Greek: {{t|el|Β' Σαμουήλ}}
 * Irish: {{t|ga|Dara Leabhar Shamúéil|m}}, {{t|ga|2 Samúéil|m}}
 * Japanese: {{t|ja|サムエル記下|tr=Samueru-kige|sc=Jpan}}
 * Korean: {{t|ko|사무엘하|tr=Samuel-ha}}
 * Ngazidja Comorian: {{t|zdj|2 Samweli}}
+* Polish: {{t|pl|Druga Księga Samuela|f}}
 * Spanish: {{t|es|2 Samuel|m}}
 * Thai: {{t|th|๒ ซามูเอล}}
 {{trans-bottom}}
