--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -8,7 +8,7 @@
 From {{uder|en|frm|advertissement||statement calling attention}}, compare {{cog|fr|avertissement||warning}}. See [[advertise]]. Equivalent to {{suffix|en|advertise|ment}}.
 
 ===Pronunciation===
-* {{a|RP}} {{IPA|en|/ədˈvɜːtɪsmənt/}}, occasionally {{IPAchar|/ˈædvətaɪzmənt/}}
+* {{a|RP}} {{IPA|en|/ədˈvɜːtɪsmənt/}}, occasionally {{IPAchar|/ˈædvəˌtaɪzmənt/}}
 * {{a|GA}} {{IPAchar|/ˈædvɚˌtaɪzmənt/}}, less often {{IPA|en|/ədˈvɝtɪzmənt/}}
 * {{audio|en|en-us-advertisement.ogg|Audio (US)}}
 * {{a|NZ}} {{IPA|en|/ˈædvəˌtʌɪzmənt/|/ədˈvɜːtɪsmənt/}}
