--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -69,7 +69,10 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 
 ====Derived terms====
 {{col3|en
+|bind hand and foot
 |binder
+|bind on equip
+|bind on pickup
 |bind over
 |bind to
 |bind up
@@ -258,7 +261,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 #* {{RQ:Lovecraft Cthulhu|passage=Never mingling much with his '''bind''', he had dropped gradually from social visibility, and was now known only to a small group of esthetes from other towns.}}
 
 ====Derived terms====
-* {{l|en|bindweed}}
+{{der2|en|bellbind|bind rune|bindweed|double bind|Maróczy bind}}
 
 ===References===
 * {{R:OneLook}}
