/* Proper noun */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <Las Vegas#69184656>

--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -91,6 +91,6 @@ From {{bor|en|es|[[las]] [[vega|vegas]]||the fertile meadows}}.
 {{es-IPA}}
 
 ===Proper noun===
-{{es-proper noun|f|head={{l|es|las|Las}} {{l|es|vega|Vegas}}}}
+{{es-proper noun|f|head=[[las|Las]] [[vegas|Vegas]]}}
 
 # {{place|es|city|s/Nevada|c/United States|t1=Las Vegas}}
