--- a/en/r/rose gold.855393.wikitext
+++ b/en/r/rose gold.855393.wikitext
@@ -19,4 +19,4 @@
 ====Usage notes====
 * While the terms ''rose gold'', ''pink gold'' and ''red gold'' are often used interchangeably, they may be used more specifically to indicate the proportion of copper (which gives the red colour). In that case, pink gold uses the least copper, followed by rose gold, with red gold having the highest copper content.
 
-[[Category:en:Pinks]]
+{{C|en|Alloys|Pinks}}
