/* Derived terms */ <bleed#69189566>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -54,6 +54,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan|t=to bleed}}, from {{inh|e
 |bleeding heart
 |bleed red ink
 |crossbleed start<!--method of starting aircraft turbine engine-->
+|I'm bleeding
 |if it bleeds, it leads
 |bleed like a pig|bleed like a stuck hog|bleed like a stuck pig|bleed the lizard|bleed the monkey}}
 
