--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -27,6 +27,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 *: Mandarin: {{t+|cmn|嘎|tr=gá}}, {{t+|cmn|呱|tr=guā}}
 * Danish: {{t+|da|rap|n}}
 * Dutch: {{t+|nl|kwak|m}}
+* Esperanto: {{t|eo|kvako}}
 * Estonian: {{t+|et|prääks}}
 * Faroese: {{t|fo|gvagg|n}}, {{t|fo|kvagg|n}}
 * Finnish: {{t+|fi|kvaak}}
@@ -83,6 +84,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Czech: {{t|cs|káchat}}
 * Danish: {{t|da|rappe}}
 * Dutch: {{t+|nl|kwaken}}
+* Esperanto: {{t|eo|kvaki}}
 * Finnish: {{t+|fi|vaakkua}}
 * French: {{t+|fr|cancaner}}
 * Georgian: {{t|ka|ყიყინი}}
