--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -42,6 +42,7 @@ From {{inh|en|enm|roten}}, {{m|enm|rotten}}, from {{inh|en|ang|rotian||to rot, b
 * {{l|en|brain rot}}
 * {{l|en|brown rot}}
 * {{l|en|potter's rot}}
+* {{l|en|rot through}}
 
 ====Translations====
 {{trans-top|''(intransitive)'' to suffer decomposition}}
