--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -154,7 +154,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 |outblow
 |suck and blow
 |there she blows
-|blow a backsight|blow a cloud|blow a fuse|blow a nut|blow chunks|blow in the bag|blow it out one's ear|blow me down|blow me over|blow me pink|blow me tight|blow me up||blow off course|blow one's chance|blow one's cool|blow one's cork|blow one's lid|blow one's load|blow one's own horn|blow one's own trumpet|blow one's stack|blow one's wad|blow out of proportion|blow out of proportions|blow out one's bags|blow past|blow sky high|blow smoke|blow smoke up someone's ass|blow something out of the water|blow the coals|blow the cobwebs away|blow the gaff|blow this for a game of soldiers|blow this for a lark|blow this joint|blow this pop stand|blow this popsicle stand|blow this Popsicle stand|blow tomahawks|blow town|blow wide open|blow wise to|blow with the wind|blow-dry|blow-in|blowout|blow-wave|cop and blow|go or blow|snow-blow|whistle blow|whistle-blow}}
+|blow a backsight|blow a cloud|blow a fuse|blow a nut|blow chunks|blow in the bag|blow it out one's ear|blow me down|blow me over|blow me pink|blow me tight|blow me up||blow off course|blow one's chance|blow one's cool|blow one's cork|blow one's lid|blow one's load|blow one's own horn|blow one's own trumpet|blow one's stack|blow one's wad|blow out of proportion|blow out of proportions|blow out one's bags|blow past|blow sky high|blow smoke|blow smoke up someone's ass|blow something out of the water|blow the coals|blow the cobwebs away|blow the gaff|blow this for a game of soldiers|blow this for a lark|blow this joint|blow this pop stand|blow this popsicle stand|blow this Popsicle stand|blow tomahawks|blow town|blow wide open|blow wise to|blow with the wind|blow-dry|blow-in|blowout|blow-wave|cop and blow|go or blow|snow-blow|whistle blow|whistle-blow|blowing a load|blowing agent|blowing house|blowing mill|cow blowing|glass blowing|how the wind is blowing|mind-blowing|what way the wind is blowing|which way the wind is blowing| air-blown asphalt|ale-blown|blown diffuser|blown pupil|blown save|fly-blown|free-blown|high-blown|wind-blown}}
 
 =====Translations=====
 {{trans-top|to produce an air current}} <!--1-->
