t+sv:[[förtära]] ([[WT:EDIT|Assisted]]) <consume#69239903>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -117,6 +117,7 @@ From {{inh|en|enm|consumen}}, from {{der|en|fro|consumer}}, from {{der|en|la|con
 * Sanskrit: {{t+|sa|अत्ति}}, {{t+|sa|खादति}}
 * Slovene: {{t|sl|uživati|impf}}, {{t|sl|užiti|pf}}
 * Spanish: {{t+|es|consumir}}
+* Swedish: {{t+|sv|förtära}}
 * Thai: {{t+|th|บริโภค}}, {{t+|th|กิน}}
 * Tocharian B: {{t|txb|śu-}}
 * Turkish: {{t+|tr|yemek}}, {{t+|tr|tüketmek}}
