--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -100,6 +100,8 @@ From {{uder|en|fr|ajustement}}, or else {{suffix|en|adjust|ment}}.
 * Finnish: {{t+|fi|korjaus}}
 * Hungarian: {{t+|hu|kiegyenlítés}}, {{t+|hu|jóváírás}}, {{t+|hu|megtérítés}}, {{t+|hu|visszatérítés}}
 {{trans-mid}}
+* Indonesian: {{t+|id|penyesuaian}}
+* Malay: {{t|ms|ڤلارسن|tr=[[pelarasan]]}}
 * Norwegian:
 *: Bokmål: {{t|nb|korrigering|m|f}}
 {{trans-bottom}}
