--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -149,7 +149,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 * Polish: {{t+|pl|gronostaj|m}}
 * Romanian: {{t+|ro|herminat|m|n}}
 * Spanish: {{t+|es|armiño|m}}
-* Swedish: {{t+|sv|hermelin|c}}
+* Swedish: {{t+|sv|hermelin}}
 {{trans-bottom}}
 
 ===Adjective===
