--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -1,5 +1,5 @@
 ==English==
-[[File:Asclepias_curassavica13.jpg|thumb|Tropical '''milkweed''' (plant), {{taxlink|Asclepias curassavica L.|species|noshow=1}}]]
+[[File:Asclepias_curassavica13.jpg|thumb|Tropical '''milkweed''' (plant), {{taxlink|Asclepias curassavica L.|species}}]]
 
 ===Etymology===
 {{compound|en|milk|weed}}
@@ -10,14 +10,14 @@
 # Any of several [[plant]]s that have a milky [[sap]] and have [[pod]]s that split to release seeds with silky tufts.
 ## Principally of the genus ''[[Asclepias]]'' in order [[Gentianales]], family [[Apocynaceae]]
 ## Also of the genus ''[[Calotropis]]'' in order [[Gentianales]], family [[Apocynaceae]]
-## {{taxlink|Euphorbia peplus|species|noshow=1|ver=161014}} and {{taxlink|Euphorbia heterophylla|species|noshow=1|ver=161014}}, in order [[Malpighiales]].
+## {{taxlink|Euphorbia peplus|species|ver=161014}} and {{taxlink|Euphorbia heterophylla|species|ver=161014}}, in order [[Malpighiales]].
 # A [[monarch butterfly]] (''[[Danaus]]'' spp).
 
 ====Synonyms====
 * {{l|en|silkweed}}
 
 ====Hyponyms====
-* {{sense|plants in genus ''Asclepias''}} {{vern|common milkweed}} ({{taxlink|Asclepias syriaca|species|noshow=1|ver=161014}}), {{vern|clasping milkweed}} ({{taxlink|Asclepias amplexicaulis|species|noshow=1|ver=161014}}), [[butterfly milkweed]] (''[[Asclepias tuberosa]]''), {{vern|fourleaf milkweed}} ({{taxlink|Asclepias quadrifolia|species|noshow=1|ver=161014}}), {{vern|green comet milkweed}} (''[[Asclepias viridiflora]]''), {{vern|poke milkweed}} ({{taxlink|Asclepias exaltata|species|noshow=1|ver=161014}}), [[purple milkweed]] ({{taxlink|Asclepias purpurascens|species|noshow=1|ver=161014}}), {{vern|red milkweed}} ({{taxlink|Asclepias rubra|species|noshow=1|ver=161014}}), {{vern|redring milkweed}} ({{taxlink|Asclepias variegata|species|noshow=1|ver=161014}}), [[swamp milkweed]] (''[[Asclepias incarnata]]''), {{vern|whorled milkweed}} ({{taxlink|Asclepias verticillata|species|noshow=1|ver=161014}})
+* {{sense|plants in genus ''Asclepias''}} {{vern|common milkweed}} ({{taxlink|Asclepias syriaca|species|ver=161014}}), {{vern|clasping milkweed}} ({{taxlink|Asclepias amplexicaulis|species|ver=161014}}), [[butterfly milkweed]] (''[[Asclepias tuberosa]]''), {{vern|fourleaf milkweed}} ({{taxlink|Asclepias quadrifolia|species|ver=161014}}), {{vern|green comet milkweed}} (''[[Asclepias viridiflora]]''), {{vern|poke milkweed}} ({{taxlink|Asclepias exaltata|species|ver=161014}}), [[purple milkweed]] ({{taxlink|Asclepias purpurascens|species|ver=161014}}), {{vern|red milkweed}} ({{taxlink|Asclepias rubra|species|ver=161014}}), {{vern|redring milkweed}} ({{taxlink|Asclepias variegata|species|ver=161014}}), [[swamp milkweed]] (''[[Asclepias incarnata]]''), {{vern|whorled milkweed}} ({{taxlink|Asclepias verticillata|species|ver=161014}})
 
 ====Translations====
 {{trans-top|plant of the genus ''Asclepias''}}
