--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -433,7 +433,7 @@ From {{inh|da|non|biti|g=m}}, from {{inh|da|gem-pro|*bitô}}, cognate with {{cog
 * {{za-pron}}
 
 ===Noun===
-{{za-head|noun|䖩|⿰虫畢}}
+{{za-head|noun|䖩|𧏻}}
 
 # [[cicada]]
 #: {{syn|za|biqrengh|q1=dialectal|nengzceq|q2=dialectal}}
