t+es:[[sifonóforo]] ([[WT:EDIT|Assisted]]) <siphonophore#69255591>

--- a/en/s/siphonophore.801198.wikitext
+++ b/en/s/siphonophore.801198.wikitext
@@ -15,6 +15,7 @@ From {{confix|en|siphono|phore}}.
 {{trans-top|hydrozoan of the order Siphonophorae}}
 * Finnish: {{t|fi|uimapolyyppi}}
 {{trans-mid}}
+* Spanish: {{t|es|sifonóforo|m}}
 {{trans-bottom}}
 
 ===Further reading===
