===Verb=== {{en-verb}}  # To call (a person) as a practical joke. <prank call#69256654>

--- a/en/p/prank call.776672.wikitext
+++ b/en/p/prank call.776672.wikitext
@@ -21,6 +21,11 @@
 * Swedish: {{t|sv|busringning|c}}
 {{trans-bottom}}
 
+===Verb===
+{{en-verb}}
+
+# To call (a person) as a practical joke.
+
 ===See also===
 * {{l|en|nuisance call}}
 
