clarify a bit <prank call#69256665>

--- a/en/p/prank call.776672.wikitext
+++ b/en/p/prank call.776672.wikitext
@@ -24,7 +24,7 @@
 ===Verb===
 {{en-verb}}
 
-# To call (a person) as a practical joke.
+# To call (an unsuspecting person) on the telephone as a practical joke.
 
 ===See also===
 * {{l|en|nuisance call}}
