/* English */ cats <Rayne#69296235>

--- a/en/r/Rayne.774571.wikitext
+++ b/en/r/Rayne.774571.wikitext
@@ -28,6 +28,5 @@
 ===Anagrams===
 * {{anagrams|en|a=aenry|Aeryn|Arney|Neary|Neyra|Raney|Yaren|aryne|renay|yarne|yearn}}
 
-[[Category:en:Heterosexual ships (fandom)]]
-[[Category:en:Ships (fandom)]]
-[[Category:en:Ships with portmanteau names (fandom)]]
+{{cln|en|eponyms}}
+{{c|en|Heterosexual ships (fandom)|Ships (fandom)|Ships with portmanteau names (fandom)}}
