[[for reasons]] <for XYZ reasons#69308193>

--- a/en/f/for XYZ reasons.802823.wikitext
+++ b/en/f/for XYZ reasons.802823.wikitext
@@ -4,3 +4,6 @@
 {{en-PP|head=[[for]] [[XYZ]] [[reason]]s}}
 
 # {{lb|en|US|idiomatic}} For reasons unknown and not worth speculating on.
+
+====Related terms====
+* {{l|en|for reasons}}
