it missing isn't a reason to remove thel ink <Balkans#69315048>

--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -2,7 +2,7 @@
 [[Image:Balkan_Peninsula.svg|thumb|250px|Balkan peninsula (as defined by the Danube-Sava-Kupa line)]]
 
 ===Alternative forms===
-* Balcans (dated)
+* {{alter|en|Balcans||dated}}
 
 ===Etymology===
 Of {{der|en|trk|-}} origin; compare {{cog|tr|balkan||wooded mountain range}}.<ref>{{R:Etymonline}}</ref> Probably unrelated to {{m|en|balk||ridge of land}}.
