--- a/en/u/unisexual.802726.wikitext
+++ b/en/u/unisexual.802726.wikitext
@@ -56,6 +56,24 @@
 
 ----
 
+==Romanian==
+
+===Etymology===
+From {{bor|ro|fr|unisexuel}}. Equivalent to {{prefix|ro|uni|sexual}}.
+
+===Adjective===
+{{ro-adj|4}}
+
+# {{l|en|unisexual}}
+
+====Declension====
+{{ro-adj-4}}
+
+===Related terms===
+* {{l|ro|unisexualitate}}
+
+----
+
 ==Spanish==
 
 ===Adjective===
