--- a/en/c/cranachan.856320.wikitext
+++ b/en/c/cranachan.856320.wikitext
@@ -12,6 +12,8 @@
 ====Translations====
 {{trans-top|dessert}}
 * Japanese: {{t|ja|クラナカン|tr=kuranakan}}
+{{trans-mid}}
+* Scottish Gaelic: {{t|gd|crannachan|m}}
 {{trans-bottom}}
 
 [[Category:en:Desserts]]
