--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -48,6 +48,7 @@ From {{der|en|grc|μικρός||small}}, or shortened form for modern words form
 ==French==
 
 ===Pronunciation===
+* {{fr-IPA}}
 * {{audio|fr|LL-Q150 (fra)-Lepticed7-micro.wav|Audio}}
 * {{audio|fr|LL-Q150 (fra)-DSwissK-micro.wav|Audio (Switzerland)}}
 
