--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -286,4 +286,4 @@ From {{inh|de|gmh|blöde|blode}}, from {{inh|de|goh|blōdi}}, from {{inh|de|gem-
 ====Derived terms====
 * {{l|pdt|Bleedheit}}
 
-[[Category:Plautdietsch one-syllable adjectives]]
+[[Category:Plautdietsch 1-syllable words]]
